# goit-web-hw-08

./: README.md  pyproject.toml
Task1/database/: db.py  models.py
Task1/seed/: seed.py
Task2/: consumer.py  consumer_email.py  consumer_sms.py  docker-compose.yml  producer.py
Task2/config/: config.py  decorators.py  model.py
